<resources>
    <string name="app_name">MYUNotePad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Add Note</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_note">Enter Your Note</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="my_note">My Notes</string>
    <string name="edit_note">Edit Note</string>
    <string name="empty_note">You do not have any Note</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="date_and_time">Date And Time</string>
    <string name="select">SELECT</string>
    <string name="your_message">Your Message</string>
    <string name="add">Add</string>
    <string name="set_reminder">Set Your Reminder</string>
    <string name="delete">Delete</string>
    <string name="deleteMessage">Are you sure you want to delete your note ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alarmSuccessfullyMessage">Alarm Set Successfully</string>
</resources>