<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation.xml"
    app:startDestination="@id/notepadFeedFragment">

    <fragment
        android:id="@+id/createNotepadFragment"
        android:name="com.mesutyukselusta.myunotepad.view.CreateNotepadFragment"
        android:label="@string/add_note"
        tools:layout="@layout/fragment_create_notepad" />
    <fragment
        android:id="@+id/editNoteFragment"
        android:name="com.mesutyukselusta.myunotepad.view.EditNoteFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_edit_note">
        <argument
            android:name="uuid"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/notepadFeedFragment"
        android:name="com.mesutyukselusta.myunotepad.view.NotepadFeedFragment"
        android:label="@string/my_note"
        tools:layout="@layout/fragment_notepad_feed">
        <action
            android:id="@+id/action_notepadFeedFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment"
            app:enterAnim="@anim/from_right" />
        <action
            android:id="@+id/action_notepadFeedFragment_to_createNotepadFragment"
            app:destination="@id/createNotepadFragment"
            app:enterAnim="@anim/from_up" />
    </fragment>
</navigation>