<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/note_background"
    android:layout_gravity="center"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/txtDate"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:layout_width="wrap_content"
            android:textSize="12dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/date_and_time"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnSelectDate"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/black"
            android:textSize="12dp"
            android:fontFamily="@font/inknut_antiqua_semibold"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnAdd"
        android:textSize="12dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:layout_gravity="center" />

</LinearLayout>