<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/note_background"
    android:layout_height="match_parent"
    tools:context=".view.CreateNotepadFragment">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="false"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/inknut_antiqua_semibold"
                android:hint="@string/enter_title"
                android:padding="10dp"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="false"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_margin="10dp"
                android:fontFamily="@font/inknut_antiqua_semibold"
                android:id="@+id/etNoteDesc"
                android:gravity="start"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_note"
                android:layout_width="match_parent"
                android:layout_height="400dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSave"
        android:layout_marginBottom="10dp"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:backgroundTint="#FF5722"
        android:fontFamily="@font/source_serif_pro_semibold"
        android:text="@string/save"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>